<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyNest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="set_home">Set Home</string>
    <string name="menuTitle_enableGPS">Enable GPS</string>
    <string name="menuTitle_disableGPS">Disable GPS</string>
    <string name="menuTitle_maps">Map</string>
    <string name="menuTitle_main">Main</string>
    <string name="title_activity_set_temp">Temperature Settings</string>
    <string name="pref_temp">Preferred Temperature</string>
    <string name="curr_temp">Current Temperature</string>
    <string name="title_activity_thermostat">ThermostatActivity</string>
    <string name="thermostat">Nest Thermostat</string>
    <string name="title_activity_display_schedule">DisplaySchedule</string>
    <string name="title_activity_set_schedule">SetSchedule</string>
    <string name="fahrenheit">F</string>


</resources>
