<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:gravity="center"
    		  android:orientation="vertical"
    		  android:layout_height="fill_parent"
    		  android:layout_width="fill_parent" >
    <Button android:id="@+id/button_thermostat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thermostat" />
    <Button android:id="@+id/menu_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuTitle_maps" />
    <Button android:id="@+id/button_set_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_temp" />
</LinearLayout>